0.756 (10.26.2006) - John Siracusa <siracusa@mindspring.com>

    * Changed the interaction and behavior of the metadata object's 
      foreign_key_name_generator() method and the convention manager's
      auto_foreign_key_name() method to avoid some name conflict bugs
      and create a more sensible flow for foreign key naming.
      (Suggested by Graham Barr)
    * Fixed a bug that causes save(changes_only => 1, cascade => 1) to
      fail in cases where a child object set a key column valid in the
      parent object.  (Reported by Lucian Dragus)
    * Fixed a bug in the Manager that cause the with_objects parameter 
      to be ignored when the count_only parameter is set.  (Reported
      by Uwe Voelker)
    * The column_values_as_*() helper methods no longer require the 
      column_value_pairs() helper to also be imported.  (Reported
      by Jonathan Vanasco)
    * Fixed a bug caused by blank lines in JSON and YAML output. 
      (Patch by Jonathan Vanasco)
    * Setting a fixed-length character column to undef now works
      correctly.
    * Corrected some typos in the documentation.

0.755 (10.20.2006) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that could cause ...-to-many accessors with
      custom sort orders to fail in some situations.
    * Removed some imported functions to correctly reflect the 
      documented list of reserved method names.  (Reported by
      Uwe Voelker)
    * Added the allow_empty_lists parameter to the Manager's 
      get_objects() method.  (Suggested by Ask Bjørn Hansen)
    * Fixed bugs in the query hints implementation.

0.754 (10.06.2006) - John Siracusa <siracusa@mindspring.com>

    * Added an optional db argument to the prime_all_caches() and
      prime_caches() metadata methods.  (Suggested by Jonathan Vanasco)
    * Improved and documented the way that unique keys are selected by
      the load() method.  (Patch by Graham Barr)